objects/LLC_BI__Product_Program_History_Detail__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Attribute_Name__c</fullName>
        <description>This field is currently not used because the product program selector feature is not being used. Logs the attribute name that was used with this history record.</description>
        <label>Attribute Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Attribute_Value__c</fullName>
        <description>This field is currently not used because the product program selector feature is not being used. Logs the attribute value that was used with this history record.</description>
        <label>Attribute Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Program_History__c</fullName>
        <description>This field is currently not used because the product program selector feature is not being used. Logs the related product program history that was used with this history record.</description>
        <label>Product Program History</label>
        <referenceTo>LLC_BI__Product_Program_History__c</referenceTo>
        <relationshipLabel>Product Program History Details</relationshipLabel>
        <relationshipName>Product_Program_History_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is currently not used because the product program selector feature is not being used. Logs the related product program that was used with this history record.</description>
        <label>Product Program</label>
        <referenceTo>LLC_BI__Product_Program__c</referenceTo>
        <relationshipLabel>Product Program History Details</relationshipLabel>
        <relationshipName>Product_Program_History_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Program History Detail</label>
    <nameField>
        <label>Product Program History Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Program History Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>